@@ -28,6 +28,7 @@
                     <launcher>roadrunner=pl.symentis.roadrunner.cli/io.roadrunner.cli.Main</launcher>
                     <addOptions>
                         <addOption>-Djdk.tracePinnedThreads=full</addOption>
+                        <addOption>-Xlog:gc*,metaspace*,safepoint</addOption>
                     </addOptions>
                 </configuration>
             </plugin>
